@@ -7,7 +7,7 @@ PHPUnit 3.3.9 by Sebastian Bergmann.
 ............................................................ 300 / 347
 ...............................................
 
-Time: 22 seconds
+Time: 5 seconds
 
 There was 1 failure:
 
@@ -21,5 +21,3 @@ C:\wamp\www\__smarty3Alpha\PHPunit\CompileCaptureTests.php:63
 
 FAILURES!
 Tests: 347, Assertions: 408, Failures: 1.
-
-Generating code coverage report, this may take a moment.
