@@ -1,3 +1,9 @@
+01/28/2009
+- added support of {strip} {/strip} tag.
+
+01/27/2009
+- bug fix on backticks in double quoted strings at objects
+
 01/25/2009
 - Smarty2 modfiers added to SVN
 
